# openapi.json
@@ -51,7 +51,7 @@
           "content" : {
             "application/json" : {
               "schema" : {
-                "$ref" : "#/components/schemas/Settings"
+                "$ref" : "#/components/schemas/SettingsValues"
               }
             }
           },
@@ -76,6 +76,28 @@
   "components" : {
     "schemas" : {
       "Settings" : {
+        "type" : "object",
+        "properties" : {
+          "blocked_domains" : {
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          },
+          "currency" : {
+            "type" : "string"
+          },
+          "floor_price" : {
+            "type" : "number"
+          },
+          "version" : {
+            "type" : "integer",
+            "format" : "int64"
+          }
+        },
+        "required" : [ "blocked_domains", "currency", "floor_price", "version" ]
+      },
+      "SettingsValues" : {
         "type" : "object",
         "properties" : {
           "blocked_domains" : {
